--- a/config/config.env
+++ b/config/config.env
@@ -1,3 +1,3 @@
 PORT = 3000
 DB_URI = mongodb+srv://anshul:bhardwaj9999@cluster0.y6cgr.mongodb.net/jobview
-NODE_ENV = development
+NODE_ENV = production
