--- a/config/config.env
+++ b/config/config.env
@@ -1,3 +1,13 @@
 PORT = 3000
 DB_URI = mongodb+srv://anshul:bhardwaj9999@cluster0.y6cgr.mongodb.net/jobview
-NODE_ENV = production
+NODE_ENV = development
+JWT_SECRET = alsdfkjoewiru234knfgldagour
+JWT_EXPIRES_TIME = 7d
+COOKIE_EXPIRES_TIME = 7
+
+SMTP_HOST = smtp.mailtrap.io
+SMTP_PORT = 2525
+SMTP_EMAIL = 5398cb1291bfaa
+SMTP_PASSWORD = c9f6b8d17ec99d
+SMTP_FROM_NAME = Anshul Bhardwaj
+SMTP_FROM_EMAIL = anshulbhardwaj987@gmail.com
