Added job apply route

--- a/config/config.env
+++ b/config/config.env
@@ -11,3 +11,6 @@ SMTP_EMAIL = 5398cb1291bfaa
 SMTP_PASSWORD = c9f6b8d17ec99d
 SMTP_FROM_NAME = Anshul Bhardwaj
 SMTP_FROM_EMAIL = anshulbhardwaj987@gmail.com
+
+MAX_FILE_SIZE = 2000000
+UPLOAD_PATH = ./public/uploads
